tests/compile_fail/three_required_third_given.stderr
error: Must specify value for non-defaulted argument: `a`
 --> $DIR/three_required_third_given.rs:3:1
  |
3 | #[named]
  | ^^^^^^^^
...
9 |     let _ = foo!(c = 8);
  |             ----------- in this macro invocation
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
